# blockml

./: .gitignore  BlockML.html  NOTES.md  README.md  exported.csv  mlflow.py  pyproject.toml  requirements.txt  setup.cfg
blockml_resources/functions/: functions.js
blockml_resources/styles/: styles.css
docs/: index.html  styles.css
example_project/: README.md
metadata/example_block/: __init__.py
metadata/example_project/: IO.py  __init__.py  flows.ini
metadata/example_project_blank/: __init__.py
metadata/example_project_blank/preprocess/: __init__.py
metadata/example_project_blank/results/: __init__.py
metadata/example_project_blank/run/: __init__.py
metadata/example_project_blank/train/: __init__.py
metadata/example_project_tagging/results/: __init__.py
mlflow_projects/fuzzy_segmentation/: README.md  __init__.py  flows.ini
mlflow_projects/fuzzy_segmentation/preprocess/: __init__.py
mlflow_projects/fuzzy_segmentation/preprocess_fis/block_text_tilling/: block_text_tilling.py
mlflow_projects/fuzzy_segmentation/results/: __init__.py
mlflow_projects/fuzzy_segmentation/run/: __init__.py
mlflow_projects/fuzzy_segmentation/train/: __init__.py
mlflow_projects/fuzzy_segmentation/visualiser/: __init__.py
