[metadata]
name = MLFlow
version = 0.0.1
author = Omar Ali
author_email = omar.ali0703@gmail.com
description = Super-light framework to help automate a block-based ML system.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omarali0703/mlflow

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src